# BrightEyes

./: .gitignore  LICENSE  README.md  TEST_PLAN_ZOOM.md  brighteyes.gresource.xml  index.md  meson.build  org.brightEyes.BrightEyes.yml  org.jeremy.BrightEyes.yml  resources.c  test.cbz
.github/workflows/: build-deb.yml  build-rpm.yml  ci.yml  flatpak-build.yml  pages.yml
SPECS/: brighteyes.spec
brighteyes-deb/: brighteyes_main_amd64.deb
brighteyes-rpm/: brighteyes-main-1.x86_64.rpm
data/: org.brightEyes.BrightEyes.desktop  org.jeremy.BrightEyes.desktop
docs/: THUMBNAILS.md
src/: archive.c  archive.h  curator.c  curator.h  main.c  metadata.c  metadata.h  ocr.c  ocr.h  thumbnails.c  thumbnails.h  viewer.c  viewer.h  window.c  window.h
tools/: smoke.sh
